@startuml

title __UPGRADE's Class Diagram__\n

  namespace com.itbird {
    namespace design.chain {
      namespace upgrade {
        class com.itbird.design.chain.upgrade.ASystemUpgradeRequestHandler {
            ~ handleUpgradeRequest()
        }
      }
    }
  }
  

  namespace com.itbird {
    namespace design.chain {
      namespace upgrade {
        class com.itbird.design.chain.upgrade.BSystemUpgradeRequestHandler {
            ~ handleUpgradeRequest()
        }
      }
    }
  }
  

  namespace com.itbird {
    namespace design.chain {
      namespace upgrade {
        class com.itbird.design.chain.upgrade.CSystemUpgradeRequestHandler {
            ~ handleUpgradeRequest()
        }
      }
    }
  }
  

  namespace com.itbird {
    namespace design.chain {
      namespace upgrade {
        class com.itbird.design.chain.upgrade.InitUpgradeRequestHandler {
            ~ handleUpgradeRequest()
        }
      }
    }
  }
  

  namespace com.itbird {
    namespace design.chain {
      namespace upgrade {
        interface com.itbird.design.chain.upgrade.UpgradeErrorCode {
            {static} + ZIP_PACKAGE_PARSE_EROOR : int
        }
      }
    }
  }
  

  namespace com.itbird {
    namespace design.chain {
      namespace upgrade {
        class com.itbird.design.chain.upgrade.UpgradeManager {
            {static} + getInstance()
            + startUpgrade()
            ~ UpgradeManager()
        }
      }
    }
  }
  

  namespace com.itbird {
    namespace design.chain {
      namespace upgrade {
        class com.itbird.design.chain.upgrade.UpgradeManager.UpgradeManagerHolder {
            {static} ~ mInstance : UpgradeManager
        }
      }
    }
  }
  

  namespace com.itbird {
    namespace design.chain {
      namespace upgrade {
        class com.itbird.design.chain.upgrade.UpgradeRequest {
            ~ bSystemPath : String
            - aSystemPath : String
            - mcuPath : String
            - name : String
            - path : String
            + UpgradeRequest()
            + getMcuPath()
            + getName()
            + getPath()
            + getaSystemPath()
            + getbSystemPath()
            + setMcuPath()
            + setName()
            + setPath()
            + setaSystemPath()
            + setbSystemPath()
        }
      }
    }
  }
  

  namespace com.itbird {
    namespace design.chain {
      namespace upgrade {
        abstract class com.itbird.design.chain.upgrade.UpgradeRequestHandler {
            + TAG()
            + handlerRequest()
            + setNextHandler()
            {abstract} ~ handleUpgradeRequest()
        }
      }
    }
  }
  

  namespace com.itbird {
    namespace design.chain {
      namespace upgrade {
        interface com.itbird.design.chain.upgrade.UpgradeResultObservable {
            {abstract} + onError()
            {abstract} + onUpgradeProgressCallback()
        }
      }
    }
  }
  

  namespace com.itbird {
    namespace design.chain {
      namespace upgrade {
        class com.itbird.design.chain.upgrade.UpgradeResultObservableAdapter {
            + attatchUpgradeObserver()
            + detachUpgradeObserver()
            + onError()
            + onUpgradeProgressCallback()
        }
      }
    }
  }
  

  com.itbird.design.chain.upgrade.ASystemUpgradeRequestHandler -up-|> com.itbird.design.chain.upgrade.UpgradeRequestHandler
  com.itbird.design.chain.upgrade.BSystemUpgradeRequestHandler -up-|> com.itbird.design.chain.upgrade.UpgradeRequestHandler
  com.itbird.design.chain.upgrade.CSystemUpgradeRequestHandler -up-|> com.itbird.design.chain.upgrade.UpgradeRequestHandler
  com.itbird.design.chain.upgrade.InitUpgradeRequestHandler -up-|> com.itbird.design.chain.upgrade.UpgradeRequestHandler
  com.itbird.design.chain.upgrade.UpgradeManager o-- com.itbird.design.chain.upgrade.UpgradeResultObservableAdapter : mAdapter
  com.itbird.design.chain.upgrade.UpgradeManager +-down- com.itbird.design.chain.upgrade.UpgradeManager.UpgradeManagerHolder
  com.itbird.design.chain.upgrade.UpgradeRequestHandler o-- com.itbird.design.chain.upgrade.UpgradeRequestHandler : nextHandler
  com.itbird.design.chain.upgrade.UpgradeResultObservableAdapter .up.|> com.itbird.design.chain.upgrade.UpgradeResultObservable
  com.itbird.design.chain.upgrade.UpgradeResultObservableAdapter -up-|> android.database.Observable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
